Fixed gallery bug, should not jump to the top if a click on picture happens.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -156,13 +156,10 @@
 
 #overlay {
   position: fixed; /* Sit on top of the page content */
+  overflow: hidden;
   display: none; /* Hidden by default */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  height: 100%;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.9); /* Black background with opacity */
   z-index: 2;
   cursor: pointer; /* Add a pointer on hover */
